--- a/templates/campagne.html
+++ b/templates/campagne.html
@@ -1,1 +1,19 @@
 <h1>Campagne</h1>
+<div id="grid-content" class="card-grid">
+
+    <div class="w3-card-4 accent-5 card-fixed" data-content="test.md">
+        <object data="" type="" class="card-img">
+            <img src="resources/default.png" alt="" class="card-img">
+        </object>
+
+        <div class="w3-container w3-padding-16 card-text">
+            <h3 class="card-title">Test</h3>
+            <p class="card-desc">test</p>
+        </div>
+        <div class="card-footer">
+            <ul class="card-tag-list">
+            </ul>
+        </div>
+    </div>
+
+</div>
