--- a/templates/campagne.html
+++ b/templates/campagne.html
@@ -1,7 +1,7 @@
 <h1>Campagne</h1>
 <div id="grid-content" class="card-grid">
 
-    <div class="w3-card-4 accent-5 card-fixed" data-content="test.md">
+    <div class="w3-card-4 accent-5 card-fixed" data-content="test">
         <object data="" type="" class="card-img">
             <img src="resources/default.png" alt="" class="card-img">
         </object>
