--- a/style.css
+++ b/style.css
@@ -328,7 +328,7 @@ main h1 {
     color: var(--accent-6);
 }
 
-/* #markdown-content h4 {
+#markdown-content h4 {
     font-size: 1.2em;
     margin: 1em 0 0.5em 0;
     color: var(--accent-6);
@@ -340,7 +340,7 @@ main h1 {
     margin: 0.8em 0 0.4em 0;
     color: var(--accent-1);
     font-weight: 600;
-} */
+}
 
 /* First letter styling */
 /* #markdown-content h1::first-letter,
