--- a/templates/mondi.html
+++ b/templates/mondi.html
@@ -1,7 +1,7 @@
 <h1>Mondi</h1>
 <div id="grid-content" class="card-grid">
 
-    <div class="w3-card-4 accent-5 card-fixed" data-content="fabaresh_ita.md">
+    <div class="w3-card-4 accent-5 card-fixed" data-content="fabaresh_ita">
         <object data="" type="" class="card-img">
             <img src="resources/default.png" alt="" class="card-img">
         </object>
